tdf#148237 Show 'Footnote' and 'Endnote' as field name for field cross

references to footnotes and endnotes

Change-Id: Ie1828c9c4ec0c3c8159c8e5653b09b2b7bd8a5e3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/133092
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>